--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <div class="head-text">
             <h1>All Thinks Are Possible If You believe</h1>
@@ -22,14 +23,16 @@
             <button class="btn">Contact Us</button>
         </div>
     </header>
+    <!-- this is the body main part -->
     <main>
-
+        <!-- first section -->
         <h1 id="you-need">You Need To Develop Your Knowledge</h1>
         <section class="knowledge">
             <div>
                 <img src="images/3.png" alt="" width="340px" height="220px">
                 <h2>Knowledge Development</h2>
-                <p class="knowledge-p">Young man looking at video tutorials, courses knowledge development using the internet.</p>
+                <p class="knowledge-p">Young man looking at video tutorials, courses knowledge development using the
+                    internet.</p>
             </div>
             <div>
                 <img src="images/2.jpeg" alt="" width="340px" height="220px">
@@ -42,7 +45,7 @@
                 <p class="knowledge-p">Before software can be reusable it first has to be usable.</p>
             </div>
         </section>
-
+        <!-- second section -->
         <section class="main-section">
             <div>
                 <img src="images/person.png" alt="">
@@ -50,7 +53,8 @@
             <div class="main-section-div">
                 <h1>My failures of previous year</h1>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <!-- using html code for sign -->
                 <li><span>&#10004;</span> Contrary to popular belief, is not simply.</li>
                 <li><span>&#10004;</span> Contrary to popular belief.</li>
                 <li><span>&#10004;</span> Contrary to popular , is not simply.</li>
@@ -58,7 +62,7 @@
                 <li><span>&#10004;</span> Contrary to popular simply.</li>
             </div>
         </section>
-
+        <!-- third section -->
         <h1>My Plans</h1>
         <section class="my-plans">
             <div>
@@ -82,16 +86,18 @@
                 <h4>I want to develop</h4>
             </div>
         </section>
-
+        <!-- fourth section -->
         <section class="callnow">
             <h2 class="always">Always keep a positive mindset</h2>
             <button class="btn2">Call Now</button>
         </section>
     </main>
+    <!-- footer part -->
     <footer>
         <div>
             <h2 id="future">Future</h2>
-            <p class="footer-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="footer-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour, or randomised words</p>
             <p class="footer-text">Email : info@gmail.com</p>
             <p class="footer-text">Phone : 01500 00 00 00</p>
             <img src="images/icons/fb.png" alt="">
@@ -106,5 +112,6 @@
         </div>
     </footer>
 </body>
+<!-- end body -->
 
 </html>
